[gd_scene load_steps=2 format=2]

[ext_resource path="res://physics/singletons/root_scene.gd" type="Script" id=1]

[node name="Root_global" type="Node"]
script = ExtResource( 1 )

[node name="bodies" type="Node" parent="."]

[node name="physics_envs" type="Node" parent="."]
