[gd_scene load_steps=6 format=2]

[ext_resource path="res://physics/singletons/root_scene.gd" type="Script" id=1]
[ext_resource path="res://physics/singletons/viewport_overlay/viewport_overlay.tscn" type="PackedScene" id=2]
[ext_resource path="res://physics/interact_icon/interaction_node_manager.tscn" type="PackedScene" id=3]
[ext_resource path="res://physics/singletons/visual_layer/visual_layer_near.tscn" type="PackedScene" id=4]
[ext_resource path="res://physics/singletons/visual_layer/visual_layer_space.tscn" type="PackedScene" id=5]

[node name="RootGlobal" type="Node"]
script = ExtResource( 1 )

[node name="VisualLayerSpace" parent="." instance=ExtResource( 5 )]
__meta__ = {
"_editor_description_": "Thi is a visual layer in which whole planets are visualized. It is scaled."
}

[node name="VisualLayerNear" parent="." instance=ExtResource( 4 )]
__meta__ = {
"_editor_description_": "This one is for visualizing 1:1 objects like player controlled objects and close range landscape."
}

[node name="VisualLayerOverlay" parent="." instance=ExtResource( 2 )]
__meta__ = {
"_editor_description_": "This one is for overlay elements like connection nodes which are rendered on top of other objects.."
}

[node name="PhysicsEnvs" type="Node" parent="."]

[node name="GuiPanels" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="GuiWindows" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GuiPopups" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InteractionNodeManager" parent="." instance=ExtResource( 3 )]

[node name="CollisionSurfaces" type="Node" parent="."]
__meta__ = {
"_editor_description_": "This one is for storing collision surfaces for physics reference frames when parented by rotating ref frames of planets."
}
